added important details

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li>Advies computers en randapparatuur</li>
             <li>Op maat bouwen computers</li>
             <li><img src="assets/new.gif" />Gratis wifi</li>
+            Het wifi wachtwoord is:
+            <li></li>
         </ul>
 
         <h1>PC stuk?</h1>
@@ -66,7 +68,7 @@
             <img src="assets/mchammer.gif" />
         </center>
 
-        <hr />
+        <hr/>
 
         <center>
             <p>
@@ -78,6 +80,9 @@
             </p>
             <p>
                 <img src="assets/bestewebsite.png" />
+            </p>
+            <p>
+                <img src="assets/payment.jpg" style="max-width: 50%;" />
             </p>
         </center>
     </div>
