--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="assets/bestewebsite.png" />
             </p>
             <p>
-                <img src="assets/payment.jpg" style="max-width: 50%;" />
+                <img src="assets/corey.gif" style="max-width: 30%;" />
             </p>
         </center>
     </div>
