link corey to ideal webpage

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="assets/bestewebsite.png" />
             </p>
             <p>
-                <img src="assets/corey.png" style="max-width: 30%;" />
+                <a href="https://nl.wikipedia.org/wiki/Ideal_(Duitse_band)"><img src="assets/corey.png" style="max-width: 30%;" /></a>
             </p>
         </center>
     </div>
