--- a/index.html
+++ b/index.html
@@ -86,22 +86,7 @@
             <p>
                 <a href="https://nl.wikipedia.org/wiki/Ideal_(Duitse_band)"><img src="assets/corey.png" height="100px" /></a>
                 <!-- this blocks chinese IPs -->
-                <a href="http://www.minipret.nl/Winnie-de-Pooh-spelletjes.html"><img src=assets/tankman.gif height=100px title="动态网自由门 天安門
-            天安门 法輪功 李洪志 Free Tibet 六四天安門事件 The Tiananmen Square
-            protests of 1989 天安門大屠殺 The Tiananmen Square Massacre
-            反右派鬥爭 The Anti-Rightist Struggle 大躍進政策 The Great Leap
-            Forward 文化大革命 The Great Proletarian Cultural Revolution 人權
-            Human Rights 民運 Democratization 自由 Freedom 獨立 Independence
-            多黨制 Multi-party system 台灣 臺灣 Taiwan Formosa 中華民國 Republic
-            of China 西藏 土伯特 唐古特 Tibet 達賴喇嘛 Dalai Lama 法輪功 Falun
-            Dafa 新疆維吾爾自治區 The Xinjiang Uyghur Autonomous Region
-            諾貝爾和平獎 Nobel Peace Prize 劉暁波 Liu Xiaobo 民主 言論 思想 反共
-            反革命 抗議 運動 騷亂 暴亂 騷擾 擾亂 抗暴 平反 維權 示威游行 李洪志
-            法輪大法 大法弟子 強制斷種 強制堕胎 民族淨化 人體實驗 肅清 胡耀邦
-            趙紫陽 魏京生 王丹 還政於民 和平演變 激流中國 北京之春 大紀元時報
-            九評論共産黨 獨裁 專制 壓制 統一 監視 鎮壓 迫害 侵略 掠奪 破壞 拷問
-            屠殺 活摘器官 誘拐 買賣人口 遊進 走私 毒品 賣淫 春畫 賭博 六合彩
-            天安門 天安门 法輪功 李洪志 Winnie the Pooh 劉曉波动态网自由门" /></a>
+                <a href="http://www.minipret.nl/Winnie-de-Pooh-spelletjes.html"><img src=assets/tankman.gif height=100px title="动态网自由门 天安門 天安门 法輪功 李洪志 Free Tibet 六四天安門事件 The Tiananmen Square protests of 1989 天安門大屠殺 The Tiananmen Square Massacre 反右派鬥爭 The Anti-Rightist Struggle 大躍進政策 The Great Leap Forward 文化大革命 The Great Proletarian Cultural Revolution 人權 Human Rights 民運 Democratization 自由 Freedom 獨立 Independence 多黨制 Multi-party system 台灣 臺灣 Taiwan Formosa 中華民國 Republic of China 西藏 土伯特 唐古特 Tibet 達賴喇嘛 Dalai Lama 法輪功 Falun Dafa 新疆維吾爾自治區 The Xinjiang Uyghur Autonomous Region 諾貝爾和平獎 Nobel Peace Prize 劉暁波 Liu Xiaobo 民主 言論 思想 反共 反革命 抗議 運動 騷亂 暴亂 騷擾 擾亂 抗暴 平反 維權 示威游行 李洪志 法輪大法 大法弟子 強制斷種 強制堕胎 民族淨化 人體實驗 肅清 胡耀邦 趙紫陽 魏京生 王丹 還政於民 和平演變 激流中國 北京之春 大紀元時報 九評論共産黨 獨裁 專制 壓制 統一 監視 鎮壓 迫害 侵略 掠奪 破壞 拷問 屠殺 活摘器官 誘拐 買賣人口 遊進 走私 毒品 賣淫 春畫 賭博 六合彩 天安門 天安门 法輪功 李洪志 Winnie the Pooh 劉曉波动态网自由门 2014 Umbrella Movement 雨傘革命 Belt and Road Initiative 丝绸之路经济带和21世纪海上丝绸之路 One Belt One Road 一带一路 Debt-trap diplomacy 債務陷阱外交 South China Sea Dispute 南海爭議 Murder of Poon Hiu-wing潘曉穎命案 2019–20 Hong Kong protests反對逃犯條例修訂草案運動 Siege of the Hong Kong Polytechnic University香港理工大學衝突 Milk Tea Alliance奶茶聯盟 Yellow economic circle黄色经济圈 CCP/China/Wuhan Coronavirus冠状病毒Hong Kong national security law香港国家安全法 Wumao (50-cent Army)/Little Pinks五毛/小粉红 Douyin Propaganda 斗阴宣传 White Monkey Jobs 白猴子职位 Mulan 2020 Xinjiang 新疆木兰2020 laowhy86 and serpentza escapes china laowhy86和serpentza逃离中国 Kiryu Coco and Haachama Taiwan #1 Hololive Kiryu Coco 和 Haachama Taiwan #1 Hololive Jack Ma Missing? 马云失踪了吗？Coast Guard Law 海岸警卫队法 super idol 的笑容都没你的甜是什么歌，热爱105°c的你歌曲介绍 - 走红网 John Xina Apologized 约翰·西娜道歉 Social Credit System 社会信用体系" /></a>
                 <a href="https://www.google.com/search?q=microsoft"><img src=assets/microsoftpowered.png height="75px" /></a>
             </p>
         </center>
