added the css magic

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="mid">
         <div class="row">
             <div class="column" style="padding-right: 10px">
-                <img src="assets/nitori.jpg" height="160px" />
+                <img src="assets/nitori.jpg" height="160px" class="image" />
             </div>
             <div class="column">
-                <img src="assets/logo.png" />
+                <img src="assets/logo.png" class="imageZoom" />
                 <marquee scrollamount="10">De beste computerreparaties in heel gemeente Ermelo!</marquee>
                 <p>Stationsstraat 89E | 3851 NC | Ermelo</p>
             </div>
