--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
             <li><span class="spoiler">Admin123!</span></li>
         </ul>
 
+    </div>
+    <div class="blij">
+
+        <center>
+        <img src="assets/lain.gif" height=100px />
+        <img src="assets/lain2.gif" height=100px />
+        <img src="assets/lain5.gif" height=100px />
+        <img src="assets/lain4.gif" height=100px />
+        <img src="assets/lain3.gif" height=100px />
+        <img src="assets/lain6.gif" height=100px />
+        </center>
+    </div>
+    <div class="mid">
+
         <h1>PC stuk?</h1>
 
         <p>
