--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
     <div class="blij">
 
         <center>
-        <img src="assets/lain.gif" height=100px />
-        <img src="assets/lain2.gif" height=100px />
-        <img src="assets/lain5.gif" height=100px />
-        <img src="assets/lain4.gif" height=100px />
-        <img src="assets/lain3.gif" height=100px />
-        <img src="assets/lain6.gif" height=100px />
+            <img src="assets/lain.gif" height=100px />
+            <img src="assets/lain2.gif" height=100px />
+            <img src="assets/lain5.gif" height=100px />
+            <img src="assets/lain4.gif" height=100px />
+            <img src="assets/lain3.gif" height=100px />
+            <img src="assets/lain6.gif" height=100px />
         </center>
     </div>
     <div class="mid">
@@ -59,6 +59,9 @@
         <ul>
             <li>kaolo snel</li>
             <li>osu</li>
+            <li>runescape</li>
+            <li>league of legends</li>
+            <li>minecraft</li>
         </ul>
     </div>
 
@@ -136,7 +139,7 @@
             </p>
 
             <p>
-            <a href="https://github.com/WhatTheHai/woozpc"><img src=assets/marisa-saus.png /></a>
+                <a href="https://github.com/WhatTheHai/woozpc"><img src=assets/marisa-saus.png /></a>
         </center>
     </div>
 </body>
