added emotes and links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="assets/nitori.jpg" height="160px" class="image" />
             </div>
             <div class="column">
-                <img src="assets/logo.png" class="imageZoom  " />
+                <img src="assets/logo.png" class="imageZoom" />
                 <marquee scrollamount="10">De beste computerreparaties in heel gemeente Ermelo!</marquee>
                 <p>Stationsstraat 89E | 3851 NC | Ermelo</p>
             </div>
@@ -49,10 +49,10 @@
     </div>
     <div class="mid">
 
-        <h1>PC stuk?</h1>
+        <h1>PC stuk? <img src="assets/cry.png" height=30px class="imageRotate" /></h1>
 
         <p>
-            Breng maar, wij fixen hem! Met vele jaren aan computerkennis gaan wij met de tijd mee en hebben wij de juiste kennis om uw computer te repareren!
+            Breng maar, wij fixen hem! <img src="assets/toppie.png" height=25px/ class="image"> Met vele jaren aan computerkennis gaan wij met de tijd mee en hebben wij de juiste kennis om uw computer te repareren!
         </p>
         <h2>Waarom kiezen voor ons?</h2>
 
@@ -81,6 +81,12 @@
         <blockquote>"Ja prima hoor"</blockquote>
 
         <blockquote>"computer gaat zrrrrrrrrrr"</blockquote>
+
+        <blockquote>"beter dan die ander"</blockquote>
+
+        <blockquote>"hoe dan"</blockquote>
+
+        <blockquote>"voorbeeld tekst"</blockquote>
       </i>
         <center>
             <!-- TRIPLE MC HAMMER -->
@@ -99,7 +105,7 @@
             </p>
             <p>
                 <img src="assets/bestewebsite.png" />
-                <img src="assets/notepad.gif" />
+                <a href="https://notepad-plus-plus.org/"><img src="assets/notepad.gif" /></a>
             </p>
             <p>
                 <a href="https://nl.wikipedia.org/wiki/Ideal_(Duitse_band)"><img src="assets/corey.png" height="100px" /></a>
@@ -140,6 +146,7 @@
 
             <p>
                 <a href="https://github.com/WhatTheHai/woozpc"><img src=assets/marisa-saus.png /></a>
+            </p>
         </center>
     </div>
 </body>
