add promotional video

--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <li>league of legends</li>
             <li>minecraft</li>
         </ul>
+
+	<video controls width="720">
+		<source src="assets/ad1.mp4" type="video/mp4">
+		<source src="assets/ad1.webm" type="video/webm">
+		there is supposed to be a video here but your garbage 3rd world browser does not support videos lmao
+	</video>
     </div>
 
     <div class="blij">
