Temporary announcement page (wow!)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+        <title>woozpc</title>
+        <link rel="stylesheet" type="text/css" href="css/realstyle.css"/>
+        <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+        <script src="js/importantSecurityScripts.js"></script>
+    </head>
 <body>
-
-<h1>Under construction...</h1>
-<p>Are you looking for <a href="test.html">this?</a></p>
-
+    <div class="bg-image"></div>
+    <div class="bg-text">
+        <img class="woozpc" src="assets/woozpc.png" alt="">
+        <h1>SOON</h1>
+        <p>Verwacht iets binnenkort... tenzij je iets anders <a href="realwebsite.html">zoekt?</a></p>
+        <p>Om de grote announcement van ons later te krijgen volg on op twitter <a href="https://twitter.com/woozpc">hier</a></p>
+      </div>
 </body>
 </html>
