temp fix for now

--- a/index.html
+++ b/index.html
@@ -2,18 +2,63 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <title>woozpc</title>
+        <title>wooz pc</title>
         <link rel="stylesheet" type="text/css" href="css/realstyle.css"/>
         <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
         <script src="js/importantSecurityScripts.js"></script>
     </head>
 <body>
+    <div>
+        
+    </div>
     <div class="bg-image"></div>
     <div class="bg-text">
-        <img class="woozpc" src="assets/woozpc.png" alt="">
-        <h1>SOON</h1>
-        <p>Verwacht iets binnenkort... tenzij je iets anders <a href="realwebsite.html">zoekt?</a></p>
-        <p>Om de grote announcement van ons later te krijgen volg on op twitter <a href="https://twitter.com/woozpc">hier</a></p>
-      </div>
+        <h1>wooz pc Ermelo</h1>
+        <h2>De nieuwe locatie voor gamers</h2>
+        <p>Wij bij wooz pc gaan van start volgende week woensdag 1 juni om 13:00!<br>
+        Bij onze grote opening is natuurlijk ook groot feest, en dat gaan we ook groots vieren!<br>
+        Iedereen die kan aantonen dat ze <a href=https://twitter.com/woozpc>onze twitter</a> volgen en <a href=https://discord.gg/jfTxGKRcWf>onze discord</a> zijn gejoined krijgen bij aankomst een gratis drankje of snack! Daarnaast zijn tickets voor de rest van de dag (13:00-18:00) eenmalig €10,-! (toegang voor 2 uur blijft €7,50)<br>
+        Interesse wat wooz pc allemaal inhoudt, en zin om langs te komen om de opening mee te maken? Lees hier onder voor meer informatie!</p>
+        <h2>Wat precies?</h2>
+        <p>Rhythm games, e-sports, competitie, hardware geeken en nog veel meer rond deze onderwerpen, als een van deze onderwerpen jou ook aanspreekt ben je op de juiste plek!<br>
+        wooz pc is een nieuwe speelhal/ICT zaak waar je je vrije tijd met vrienden of rivalen kan doorbrengen en het tegen elkaar opnemen in een variatie van geimporteerde Japanse rhythm games die al door een flinke groep in Nederland en omstreken steeds bekender wordt!<br>
+        Ons assortiment aan games bestaat op het moment uit Sound Voltex, Groove Coaster, Chunithm, Jubeat en Project Diva, en zal in de nabije toekomst nog meer uitgebreid worden met een paar fan-favorites zoals DDR, Taiko no Tatsujin en MaiMai!<br>
+        Naast de bovenstaande spellen hebben wij ook een kleine hoek waar je je een beetje terug kan trekken van alles, rustig even op een van de zelfgebouwde game pc's een potje van je favoriete e-sports titel spelen, even een drankje en een snack halen bij de bar en rustig aan een tafeltje zitten met je vrienden, of misschien zelfs wel een potje poolen of darten!</p>
+        <h2>PC Reparatie</h2>
+        <p>Wil je je gaming setup upgraden, en vind je het moeilijk om rekening te houden met waar je precies allemaal aan moet denken, en tegelijk ook nog binnen je budget blijven?<br>
+        Geen probleem! Wij geven op maat advies voor jou specifieke situatie, loop gerust een keertje bij ons binnen of neem contact met ons op op de contactinformatie onderaan de pagina, alle vragen zijn welkom!</p>
+        <h2>Openingstijden</h2>
+        <p>Vanaf 1 juni zullen wij de volgende openingstijden aanhouden:<br>
+        Maandag: 10:00-18:00<br>
+        Dinsdag: 10:00-18:00<br>
+        Woensdag: 10:00-18:00<br>
+        Donderdag: 10:00-18:00<br>
+        Vrijdag: 10:00-21:00<br>
+        Zaterdag: 10:00-21:00<br>
+        Zondag: 10:00-18:00<br></p>
+        <h2>Ticket prijzen:</h2>
+        <p>Ticket 2 uur: €7,50<br>
+        Ticket 4 uur: €12,50<br>
+        Ticket 6 uur: €17,50<br>
+        Ticket hele dag: €20,-</p>
+        <h2>Contactinformatie</h2>
+        <p>Vanaf 1 juni zullen wij de volgende openingstijden aanhouden:<br>
+            Maandag: 10:00-18:00<br>
+            Dinsdag: 10:00-18:00<br>
+            Woensdag: 10:00-18:00<br>
+            Donderdag: 10:00-18:00<br>
+            Vrijdag: 10:00-21:00<br>
+            Zaterdag: 10:00-21:00<br>
+            Zondag: 10:00-18:00<br></p>
+            <h2>Ticket prijzen:</h2>
+            <p>Ticket 2 uur: €7,50<br>
+            Ticket 4 uur: €12,50<br>
+            Ticket 6 uur: €17,50<br>
+            Ticket hele dag: €20,-</p>
+            <h2>Contactinformatie</h2>
+        <p>Telefoonnummer: +31625543086</p>
+        <p><a href="https://discord.gg/jfTxGKRcWf">Discord Server</a></p>
+        <p><a href="https://twitter.com/woozpc">Twitter</a></p>
+    </div>
 </body>
 </html>
