added address and added custom opening hours during first day

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>De nieuwe locatie voor gamers</h2>
         <p>Wij bij wooz pc gaan van start volgende week woensdag 1 juni om 13:00!<br>
         Bij onze grote opening is natuurlijk ook groot feest, en dat gaan we ook groots vieren!<br>
-        Iedereen die kan aantonen dat ze <a href=https://twitter.com/woozpc>onze twitter</a> volgen en <a href=https://discord.gg/jfTxGKRcWf>onze discord</a> zijn gejoined krijgen bij aankomst een gratis drankje of snack! Daarnaast zijn tickets voor de rest van de dag (13:00-18:00) eenmalig €10,-! (toegang voor 2 uur blijft €7,50)<br>
+        Iedereen die kan aantonen dat ze <a href=https://twitter.com/woozpc>onze twitter</a> volgen en <a href=https://discord.gg/jfTxGKRcWf>onze discord</a> zijn gejoined krijgen bij aankomst een gratis drankje of snack! Daarnaast zijn tickets voor de rest van de dag (13:00-21:00) eenmalig €10,-! (toegang voor 2 uur blijft €7,50)<br>
         Interesse wat wooz pc allemaal inhoudt, en zin om langs te komen om de opening mee te maken? Lees hier onder voor meer informatie!</p>
         <h2>Wat precies?</h2>
         <p>Rhythm games, e-sports, competitie, hardware geeken en nog veel meer rond deze onderwerpen, als een van deze onderwerpen jou ook aanspreekt ben je op de juiste plek!<br>
@@ -35,16 +35,22 @@
         Donderdag: 10:00-18:00<br>
         Vrijdag: 10:00-21:00<br>
         Zaterdag: 10:00-21:00<br>
-        Zondag: 10:00-18:00<br></p>
+        Zondag: 10:00-18:00<br>
+        Tijdens de openingsdag zullen wij eenmalig tot 21:00 open zijn op een woensdag!</p>
         <h2>Ticket prijzen:</h2>
         <p>Ticket 2 uur: €7,50<br>
         Ticket 4 uur: €12,50<br>
         Ticket 6 uur: €17,50<br>
         Ticket hele dag: €20,-</p>
         <h2>Contactinformatie</h2>
-        <p>Telefoonnummer: +31625543086</p>
-        <p><a href="https://discord.gg/jfTxGKRcWf">Discord Server</a></p>
-        <p><a href="https://twitter.com/woozpc">Twitter</a></p>
+        <p>Telefoonnummer: +31625543086<br>
+        <a href="https://discord.gg/jfTxGKRcWf">Discord Server</a><br>
+        <a href="https://twitter.com/woozpc">Twitter</a></p>
+        <h2>Adresgegevens</h2>
+        <p>Stationsstraat 89E<br>
+        3851 NC Ermelo<br></p>
+        <p>Voor mensen die met het OV komen, het is nog geen 10 minuten lopen van Treinstation Ermelo.<br>
+        Voor mensen die met de auto komen, er is een gratis parkeerplaats vlak achter de winkel.</p>
     </div>
 </body>
 </html>
