Change in opening

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         Geen probleem! Wij geven op maat advies voor jou specifieke situatie, loop gerust een keertje bij ons binnen of neem contact met ons op op de contactinformatie onderaan de pagina, alle vragen zijn welkom!</p>
         <h2>Openingstijden</h2>
         <p>Vanaf 1 juni zullen wij de volgende openingstijden aanhouden:<br>
-        Maandag: 10:00-18:00<br>
+        Maandag: Gesloten<br>
         Dinsdag: 10:00-18:00<br>
         Woensdag: 10:00-18:00<br>
         Donderdag: 10:00-18:00<br>
         Vrijdag: 10:00-21:00<br>
         Zaterdag: 10:00-21:00<br>
-        Zondag: 10:00-18:00<br></p>
+        Zondag: Gesloten<br></p>
         <h2>Ticket prijzen:</h2>
         <p>Ticket 2 uur: €7,50<br>
         Ticket 4 uur: €12,50<br>
