--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
             <h2>De nieuwe locatie voor gamers</h2>
             <p>Wij bij wooz pc gaan van start op woensdag 1 juni om 13:00!<br>
             Bij onze grote opening is natuurlijk ook groot feest, en dat gaan we ook groots vieren!<br>
-            Iedereen die kan aantonen dat ze <a href=https://twitter.com/woozpc>onze twitter</a> volgen en zijn toegetreden tot <a href=https://discord.gg/jfTxGKRcWf>onze discord</a> krijgen bij aankomst een gratis drankje of snack! Daarnaast zijn tickets voor de rest van de dag (13:00-21:00) eenmalig €10,-! (toegang voor 2 uur blijft €7,50)<br>
+            Iedereen die kan aantonen dat ze <a href=https://twitter.com/woozpc>onze Twitter</a> volgen en zijn toegetreden tot <a href=https://discord.gg/jfTxGKRcWf>onze Discord</a> krijgen bij aankomst een gratis drankje of snack! Daarnaast zijn tickets voor de rest van de dag (13:00-21:00) eenmalig €10,-! (Toegang voor 2 uur blijft €7,50)<br>
             Interesse in wat wooz pc allemaal inhoudt, en zin om langs te komen om de opening mee te maken? Lees hieronder voor meer informatie!</p>
             <h2>Wat precies?</h2>
             <p>Rhythm games, e-sports, competitie, hardware geeks en nog veel meer rond deze onderwerpen, als één van deze onderwerpen jou ook aanspreekt ben je op de juiste plek!<br>
-            wooz pc is een nieuwe speelhal/ICT-zaak waar je jouw vrije tijd met vrienden of rivalen kan doorbrengen en het tegen elkaar kan opnemen in een variatie van geimporteerde Japanse rhythm games die al door een flinke groep in Nederland en omstreken steeds bekender wordt!<br>
-            Ons assortiment aan games bestaat op het moment uit Sound Voltex, Groove Coaster, Chunithm, Jubeat, Project Diva en MaiMai. In de nabije toekomst zal dit nog meer uitgebreid worden met een paar fan-favorites zoals DDR en Taiko no Tatsujin!<br>
+            wooz pc is een nieuwe speelhal/ICT-zaak waar je jouw vrije tijd met vrienden of rivalen kan doorbrengen en het tegen elkaar kan opnemen in een variatie van geïmporteerde Japanse rhythm games die al door een flinke groep in Nederland en omstreken steeds bekender wordt!<br>
+            Ons assortiment aan games bestaat op het moment uit:
+            <div class="centre-list">
+                <ul>
+                    <li>Sound Voltex</li>
+                    <li>Groove Coaster</li>
+                    <li>Chunithm</li>
+                    <li>Jubeat</li>
+                    <li>Project Diva</li>
+                    <li>MaiMai</li>
+                </ul> 
+            </div>
+            In de nabije toekomst zal dit nog meer uitgebreid worden met een paar fan-favorites zoals DDR en Taiko no Tatsujin!<br>
             Naast de bovenstaande spellen hebben wij ook een kleine hoek waar je je een beetje terug kan trekken van alles, rustig even op een van de zelfgebouwde game pc's een potje van je favoriete e-sports titel spelen, even een drankje en een snack halen bij de bar en rustig aan een tafeltje zitten met je vrienden, of misschien zelfs wel een potje poolen of darten!</p>
             <h2>PC Reparatie</h2>
             <p>Wil je jouw gaming setup upgraden en vind je het moeilijk om rekening te houden met waar je precies allemaal aan moet denken en tegelijk ook nog binnen je budget blijven?<br>
@@ -38,7 +49,7 @@
             Zaterdag: 10:00-21:00<br>
             Zondag: Gesloten<br>
             Tijdens de openingsdag zullen wij eenmalig tot 21:00 open zijn!</p>
-            <h2>Ticket prijzen:</h2>
+            <h2>Ticketprijzen:</h2>
             <p>Ticket 2 uur: €7,50<br>
             Ticket 4 uur: €12,50<br>
             Ticket 6 uur: €17,50<br>
