--- a/realwebsite.html
+++ b/realwebsite.html
@@ -29,10 +29,15 @@
             <li>Reparaties toetsenbord</li>
             <li>Advies computers en randapparatuur</li>
             <li>Op maat bouwen computers</li>
-            <li><img src="assets/new.gif" />Gratis wifi</li>
-            Het wifi wachtwoord is:
-            <li><span class="spoiler">welkom01</span></li>
-            <li><span class="spoiler">Admin123!</span></li>
+            <li><img src="assets/new.gif" />Gratis wifi
+                <div class="tab-left">
+                    Het wifi wachtwoord is:
+                    <ul>
+                        <li><span class="spoiler">welkom01</span></li>
+                        <li><span class="spoiler">Admin123!</span></li>
+                    </ul>
+                </div>
+            </li>
         </ul>
 
     </div>
